# SimpleKnowledgeBase

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.streamlit/: config.toml
backend/app/: config.py  document_extraction.py  document_normalizer.py  extractors.py  file_types.py  main.py  models.py  pdf_images.py  pdf_splitter.py  processing.py  storage.py
backend/app/dev/: __init__.py  mock_extractor.py
backend/tests/: test_api.py  test_config.py  test_dependencies.py  test_document_extraction.py  test_extractors.py  test_file_types.py  test_models.py  test_pdf_splitter.py
config/: document_categories.json
frontend/: app.py  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  graphUtils.js  styles.css
frontend/src/components/: DocumentList.jsx  DropZone.jsx  Header.jsx  Inspector.jsx  SideRail.jsx  StructuredOutput.jsx
