[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-structurer"
version = "0.1.0"
description = "Local-first industrial claim file ingestion and structured KG extraction app."
requires-python = ">=3.11"
dependencies = [
  "azure-ai-projects>=2.2.0",
  "azure-identity>=1.17.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.80.0",
  "Pillow>=9.1.0",
  "pydantic>=2.8.0",
  "pypdf>=5.0.0",
  "pypdfium2>=4.18.0",
  "python-multipart>=0.0.9",
  "streamlit>=1.41.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q"
